// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Render Test renders buttons correctly 1`] = `
<span
  class="bs-button WhiteBgTextBlue  btn-lg flex-row-reverse  group relative cursor-pointer overflow-hidden inline-flex gap-[1rem] items-center justify-center capitalize"
  data-testid="button-test-id"
>
  <span>
    Button Text
  </span>
  <span
    class="bs-btn-icon"
  >
    <svg
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="9 14 4 9 9 4"
      />
      <path
        d="M20 20v-7a4 4 0 0 0-4-4H4"
      />
    </svg>
  </span>
  <span
    class="absolute bs-button-bg inset-0"
  />
</span>
`;

exports[`Given icon option: AiOutlineMinusCircle Expect button to have AiOutlineMinusCircle 1`] = `
<span
  class="bs-button WhiteBgTextBlue  btn-lg flex-row-reverse  group relative cursor-pointer overflow-hidden inline-flex gap-[1rem] items-center justify-center capitalize"
  data-testid="button-test-id"
>
  <span>
    Button Text
  </span>
  <span
    class="bs-btn-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 1024 1024"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M696 480H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h368c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8z"
      />
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
      />
    </svg>
  </span>
  <span
    class="absolute bs-button-bg inset-0"
  />
</span>
`;

exports[`Given icon option: AiOutlinePlusCircle Expect button to have AiOutlinePlusCircle 1`] = `
<span
  class="bs-button WhiteBgTextBlue  btn-lg flex-row-reverse  group relative cursor-pointer overflow-hidden inline-flex gap-[1rem] items-center justify-center capitalize"
  data-testid="button-test-id"
>
  <span>
    Button Text
  </span>
  <span
    class="bs-btn-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 1024 1024"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M696 480H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8z"
      />
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
      />
    </svg>
  </span>
  <span
    class="absolute bs-button-bg inset-0"
  />
</span>
`;

exports[`Given icon option: DoubleQuotation Expect button to have DoubleQuotation 1`] = `
<span
  class="bs-button WhiteBgTextBlue  btn-lg flex-row-reverse  group relative cursor-pointer overflow-hidden inline-flex gap-[1rem] items-center justify-center capitalize"
  data-testid="button-test-id"
>
  <span>
    Button Text
  </span>
  <span
    class="bs-btn-icon"
  >
    <svg
      fill="inherit"
      style="width: 100%; height: 100%;"
      viewBox="0 0 80 56"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#clip0_2147_11743)"
      >
        <path
          d="M57.1819 36.6025C56.612 36.4544 56.1061 36.3374 55.6091 36.1938C47.4598 33.8477 41.9967 26.1911 42.3944 17.6795C42.7942 9.16797 49.0238 1.96639 57.3034 0.362607C68.4018 -1.78903 77.5032 5.95819 79.2108 15.7024C80.0392 20.4254 79.4251 25.1153 78.294 29.7035C74.9694 43.1921 66.2921 51.6308 53.1923 55.7816C51.3787 56.356 49.6733 55.7308 48.688 54.2397C47.6917 52.7309 47.8088 50.8863 49.0702 49.4305C51.9332 46.1236 54.436 42.5802 56.3071 38.6127C56.6076 37.9743 56.8749 37.316 57.1841 36.6047L57.1819 36.6025ZM56.2696 48.9269C56.5788 48.8385 56.6893 48.8208 56.7821 48.7767C61.0588 46.7421 64.759 43.9675 67.6573 40.201C72.6454 33.7196 74.479 26.222 74.1653 18.2384C73.8737 10.8204 67.664 4.75866 59.8704 5.30872C53.7115 5.74391 48.1844 11.0589 47.7337 17.209C47.2234 24.1676 51.319 29.8073 58.1252 31.5127C61.768 32.4273 63.3496 35.5686 61.916 39.0236C60.4756 42.4985 58.5869 45.7193 56.2696 48.9247V48.9269Z"
          fill="inherit"
        />
        <path
          d="M14.8383 36.8452C12.8479 36.0058 10.9702 35.4071 9.28248 34.466C2.65526 30.7703 -0.989709 23.107 0.234118 15.7243C1.53084 7.90415 7.41361 1.79827 15.0327 0.364586C25.2187 -1.55289 34.8415 5.03898 36.8097 15.2714C37.5299 19.0136 37.1875 22.7403 36.6131 26.4471C35.6102 32.9285 33.2487 38.8555 29.0448 43.9673C24.1827 49.881 17.9332 53.6784 10.6411 55.8388C8.94891 56.3403 7.25897 55.6511 6.3179 54.1953C5.37905 52.7417 5.51822 51.023 6.59846 49.5761C8.52035 46.9959 10.4842 44.4378 12.2647 41.7604C13.3052 40.1942 14.0276 38.4181 14.8361 36.8474L14.8383 36.8452ZM13.9768 48.9421C14.4186 48.7521 14.6638 48.6615 14.8957 48.5467C23.4051 44.3494 28.6737 37.5786 30.8298 28.3977C31.7399 24.523 32.2856 20.5798 31.656 16.6013C30.5846 9.83709 24.7151 5.0434 17.9597 5.3107C9.01297 5.66415 2.9093 14.9776 6.22512 23.2749C7.95704 27.6113 11.1403 30.366 15.6998 31.486C19.4354 32.405 21.1076 35.5728 19.5326 39.0786C18.4987 41.3827 17.2506 43.5939 16.0334 45.8096C15.4723 46.8324 14.7521 47.7713 13.9768 48.9399V48.9421Z"
          fill="inherit"
        />
      </g>
      <defs>
        <clippath
          id="clip0_2147_11743"
        >
          <rect
            fill="white"
            style="width: 100%; height: 100%;"
          />
        </clippath>
      </defs>
    </svg>
  </span>
  <span
    class="absolute bs-button-bg inset-0"
  />
</span>
`;

exports[`Given icon option: EventInfoCircle Expect button to have EventInfoCircle 1`] = `
<span
  class="bs-button WhiteBgTextBlue  btn-lg flex-row-reverse  group relative cursor-pointer overflow-hidden inline-flex gap-[1rem] items-center justify-center capitalize"
  data-testid="button-test-id"
>
  <span>
    Button Text
  </span>
  <span
    class="bs-btn-icon"
  >
    <svg
      fill="none"
      height="1em"
      viewBox="0 0 140 140"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <mask
        fill="white"
        id="path-1-inside-1_2689_10361"
      >
        <path
          d="M68.257 1.77226C68.2323 0.806078 68.9958 0.000530985 69.9623 4.61967e-06C82.1244 -0.00661902 94.0897 3.15618 104.673 9.19033C115.763 15.5137 124.912 24.7494 131.132 35.8982C137.351 47.047 140.403 59.6843 139.957 72.4427C139.532 84.6176 135.938 96.4603 129.543 106.806C129.035 107.628 127.948 107.854 127.139 107.326V107.326C126.33 106.797 126.105 105.714 126.612 104.891C132.658 95.0804 136.057 83.8575 136.459 72.3206C136.883 60.2001 133.983 48.1947 128.075 37.6033C122.167 27.012 113.474 18.238 102.939 12.2308C92.9106 6.51284 81.5756 3.5089 70.0516 3.50001C69.0851 3.49927 68.2816 2.73844 68.257 1.77226V1.77226Z"
        />
      </mask>
      <path
        d="M68.257 1.77226C68.2323 0.806078 68.9958 0.000530985 69.9623 4.61967e-06C82.1244 -0.00661902 94.0897 3.15618 104.673 9.19033C115.763 15.5137 124.912 24.7494 131.132 35.8982C137.351 47.047 140.403 59.6843 139.957 72.4427C139.532 84.6176 135.938 96.4603 129.543 106.806C129.035 107.628 127.948 107.854 127.139 107.326V107.326C126.33 106.797 126.105 105.714 126.612 104.891C132.658 95.0804 136.057 83.8575 136.459 72.3206C136.883 60.2001 133.983 48.1947 128.075 37.6033C122.167 27.012 113.474 18.238 102.939 12.2308C92.9106 6.51284 81.5756 3.5089 70.0516 3.50001C69.0851 3.49927 68.2816 2.73844 68.257 1.77226V1.77226Z"
        mask="url(#path-1-inside-1_2689_10361)"
        stroke="currentColor"
        stroke-linejoin="round"
        stroke-width="8"
      />
      <mask
        fill="white"
        id="path-2-inside-2_2689_10361"
      >
        <path
          d="M123.664 112.17C124.424 112.767 124.557 113.869 123.941 114.613C114.909 125.534 102.765 133.467 89.1057 137.342C74.8844 141.377 59.7509 140.806 45.874 135.711C31.9972 130.616 20.0896 121.259 11.8577 108.98C3.95106 97.1871 -0.174618 83.2802 0.00564409 69.1103C0.0179383 68.1439 0.83272 67.3902 1.79853 67.4267V67.4267C2.76434 67.4631 3.51533 68.2759 3.50431 69.2423C3.35112 82.6735 7.26978 95.852 14.7648 107.031C22.5851 118.696 33.8974 127.585 47.0803 132.425C60.2633 137.266 74.6402 137.808 88.1504 133.975C101.099 130.302 112.614 122.79 121.188 112.45C121.805 111.706 122.904 111.573 123.664 112.17V112.17Z"
        />
      </mask>
      <path
        d="M123.664 112.17C124.424 112.767 124.557 113.869 123.941 114.613C114.909 125.534 102.765 133.467 89.1057 137.342C74.8844 141.377 59.7509 140.806 45.874 135.711C31.9972 130.616 20.0896 121.259 11.8577 108.98C3.95106 97.1871 -0.174618 83.2802 0.00564409 69.1103C0.0179383 68.1439 0.83272 67.3902 1.79853 67.4267V67.4267C2.76434 67.4631 3.51533 68.2759 3.50431 69.2423C3.35112 82.6735 7.26978 95.852 14.7648 107.031C22.5851 118.696 33.8974 127.585 47.0803 132.425C60.2633 137.266 74.6402 137.808 88.1504 133.975C101.099 130.302 112.614 122.79 121.188 112.45C121.805 111.706 122.904 111.573 123.664 112.17V112.17Z"
        mask="url(#path-2-inside-2_2689_10361)"
        stroke="currentColor"
        stroke-linejoin="round"
        stroke-width="8"
      />
      <mask
        fill="white"
        id="path-3-inside-3_2689_10361"
      >
        <path
          d="M2.25815 61.6871C1.29884 61.5694 0.614381 60.6957 0.756034 59.7396C2.98484 44.6967 10.0561 30.7705 20.9222 20.0863C31.7884 9.40219 45.8319 2.56711 60.9104 0.592644C61.8687 0.467156 62.7307 1.16628 62.8322 2.12743V2.12743C62.9338 3.08858 62.2362 3.94769 61.2781 4.07443C46.9865 5.965 33.6781 12.4526 23.3761 22.582C13.0741 32.7115 6.36276 45.9084 4.23112 60.1661C4.08821 61.1219 3.21745 61.8048 2.25815 61.6871V61.6871Z"
        />
      </mask>
      <path
        d="M2.25815 61.6871C1.29884 61.5694 0.614381 60.6957 0.756034 59.7396C2.98484 44.6967 10.0561 30.7705 20.9222 20.0863C31.7884 9.40219 45.8319 2.56711 60.9104 0.592644C61.8687 0.467156 62.7307 1.16628 62.8322 2.12743V2.12743C62.9338 3.08858 62.2362 3.94769 61.2781 4.07443C46.9865 5.965 33.6781 12.4526 23.3761 22.582C13.0741 32.7115 6.36276 45.9084 4.23112 60.1661C4.08821 61.1219 3.21745 61.8048 2.25815 61.6871V61.6871Z"
        mask="url(#path-3-inside-3_2689_10361)"
        stroke="currentColor"
        stroke-linejoin="round"
        stroke-width="8"
      />
    </svg>
  </span>
  <span
    class="absolute bs-button-bg inset-0"
  />
</span>
`;

exports[`Given icon option: FaUserAlt Expect button to have FaUserAlt 1`] = `
<span
  class="bs-button WhiteBgTextBlue  btn-lg flex-row-reverse  group relative cursor-pointer overflow-hidden inline-flex gap-[1rem] items-center justify-center capitalize"
  data-testid="button-test-id"
>
  <span>
    Button Text
  </span>
  <span
    class="bs-btn-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 288c79.5 0 144-64.5 144-144S335.5 0 256 0 112 64.5 112 144s64.5 144 144 144zm128 32h-55.1c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16H128C57.3 320 0 377.3 0 448v16c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48v-16c0-70.7-57.3-128-128-128z"
      />
    </svg>
  </span>
  <span
    class="absolute bs-button-bg inset-0"
  />
</span>
`;

exports[`Given icon option: FiCalendar Expect button to have FiCalendar 1`] = `
<span
  class="bs-button WhiteBgTextBlue  btn-lg flex-row-reverse  group relative cursor-pointer overflow-hidden inline-flex gap-[1rem] items-center justify-center capitalize"
  data-testid="button-test-id"
>
  <span>
    Button Text
  </span>
  <span
    class="bs-btn-icon"
  >
    <svg
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="18"
        rx="2"
        ry="2"
        width="18"
        x="3"
        y="4"
      />
      <line
        x1="16"
        x2="16"
        y1="2"
        y2="6"
      />
      <line
        x1="8"
        x2="8"
        y1="2"
        y2="6"
      />
      <line
        x1="3"
        x2="21"
        y1="10"
        y2="10"
      />
    </svg>
  </span>
  <span
    class="absolute bs-button-bg inset-0"
  />
</span>
`;

exports[`Given icon option: FiCornerUpLeft Expect button to have FiCornerUpLeft 1`] = `
<span
  class="bs-button WhiteBgTextBlue  btn-lg flex-row-reverse  group relative cursor-pointer overflow-hidden inline-flex gap-[1rem] items-center justify-center capitalize"
  data-testid="button-test-id"
>
  <span>
    Button Text
  </span>
  <span
    class="bs-btn-icon"
  >
    <svg
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="9 14 4 9 9 4"
      />
      <path
        d="M20 20v-7a4 4 0 0 0-4-4H4"
      />
    </svg>
  </span>
  <span
    class="absolute bs-button-bg inset-0"
  />
</span>
`;

exports[`Given icon option: FiCornerUpRight Expect button to have FiCornerUpRight 1`] = `
<span
  class="bs-button WhiteBgTextBlue  btn-lg flex-row-reverse  group relative cursor-pointer overflow-hidden inline-flex gap-[1rem] items-center justify-center capitalize"
  data-testid="button-test-id"
>
  <span>
    Button Text
  </span>
  <span
    class="bs-btn-icon"
  >
    <svg
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="15 14 20 9 15 4"
      />
      <path
        d="M4 20v-7a4 4 0 0 1 4-4h12"
      />
    </svg>
  </span>
  <span
    class="absolute bs-button-bg inset-0"
  />
</span>
`;

exports[`Given icon option: FiNavigation Expect button to have FiNavigation 1`] = `
<span
  class="bs-button WhiteBgTextBlue  btn-lg flex-row-reverse  group relative cursor-pointer overflow-hidden inline-flex gap-[1rem] items-center justify-center capitalize"
  data-testid="button-test-id"
>
  <span>
    Button Text
  </span>
  <span
    class="bs-btn-icon"
  >
    <svg
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polygon
        points="3 11 22 2 13 21 11 13 3 11"
      />
    </svg>
  </span>
  <span
    class="absolute bs-button-bg inset-0"
  />
</span>
`;

exports[`Given icon option: FiSend Expect button to have FiSend 1`] = `
<span
  class="bs-button WhiteBgTextBlue  btn-lg flex-row-reverse  group relative cursor-pointer overflow-hidden inline-flex gap-[1rem] items-center justify-center capitalize"
  data-testid="button-test-id"
>
  <span>
    Button Text
  </span>
  <span
    class="bs-btn-icon"
  >
    <svg
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="22"
        x2="11"
        y1="2"
        y2="13"
      />
      <polygon
        points="22 2 15 22 11 13 2 9 22 2"
      />
    </svg>
  </span>
  <span
    class="absolute bs-button-bg inset-0"
  />
</span>
`;

exports[`Given icon option: FooterCustomRocket Expect button to have FooterCustomRocket 1`] = `
<span
  class="bs-button WhiteBgTextBlue  btn-lg flex-row-reverse  group relative cursor-pointer overflow-hidden inline-flex gap-[1rem] items-center justify-center capitalize"
  data-testid="button-test-id"
>
  <span>
    Button Text
  </span>
  <span
    class="bs-btn-icon"
  >
    <svg
      fill="inherit"
      height="180"
      viewBox="0 0 345 345"
      width="180"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#clip0_2197_10104)"
        opacity="1"
      >
        <path
          d="M345 12.1291C344.101 18.6697 343.356 25.2283 342.287 31.742C334.731 77.8049 319.781 120.921 290.15 157.748C282.1 167.747 272.316 176.363 263.323 185.599C262.55 186.399 261.661 187.082 261.05 187.63C263.233 193.236 265.865 198.492 267.348 204.053C271.633 220.153 268.112 234.78 257.51 247.547C244.851 262.793 228.086 271.616 209.327 276.701C202.031 278.678 194.332 279.226 186.794 280.232C183.614 280.654 181.026 279.288 179.705 276.243C178.394 273.215 179.283 270.592 181.511 268.256C190.046 259.325 193.721 248.58 193.308 236.343C193.137 231.321 191.708 230.512 187.055 232.165C178.609 235.157 170.146 238.122 161.593 240.799C154.19 243.117 153.651 242.947 146.436 241.392C144.154 244.95 141.98 248.589 139.572 252.075C131.54 263.692 119.762 269.9 106.635 273.395C95.7284 276.297 84.5248 278.147 73.3842 280.106C67.9576 281.058 64.2741 277.725 64.7951 272.568C66.3854 256.89 69.458 241.545 75.7291 226.954C80.8862 214.96 89.6369 206.488 100.876 200.307C101.757 199.822 102.646 199.372 103.931 198.69C100.796 191.7 103.491 185.087 105.593 178.52C107.875 171.368 110.544 164.342 113.113 157.29C114.434 153.678 113.508 151.98 109.636 151.755C97.678 151.063 87.0225 154.361 77.9483 162.348C77.526 162.716 77.1217 163.112 76.7174 163.498C74.4174 165.744 71.7491 166.588 68.7303 165.268C65.6756 163.929 64.6334 161.369 64.7143 158.152C64.9928 147.622 67.158 137.461 70.7428 127.587C75.5764 114.245 82.3776 102.063 92.458 91.9463C109.843 74.4986 131.639 71.1654 153.489 82.4947C154.576 83.0607 155.654 83.6447 157.002 84.3635C158.26 82.9439 159.517 81.5514 160.748 80.1318C184.081 53.1428 212.974 34.1139 245.911 20.9877C273.161 10.1256 301.417 3.28848 330.643 0.548242C331.397 0.476367 332.134 0.179883 332.889 -0.00878906C336.932 -0.00878906 340.975 -0.00878906 345.018 -0.00878906V12.1291H345ZM313.995 87.6158C313.537 87.0588 312.98 86.2861 312.315 85.6123C294.696 67.976 277.051 50.3756 259.487 32.6943C258.058 31.2568 256.863 30.9963 255.12 31.8318C243.306 37.492 231.042 42.3705 219.713 48.8752C178.906 72.3064 151.53 107.795 131.342 149.446C130.902 150.345 131.36 152.303 132.106 153.058C151.953 173.066 171.916 192.958 191.789 212.939C193.299 214.457 194.458 214.448 196.156 213.541C202.085 210.36 208.168 207.458 214.008 204.125C260.259 177.702 294.427 140.749 312.98 90.2393C313.249 89.5025 313.546 88.7748 313.995 87.6158ZM79.835 144.478C93.4463 138.413 106.564 136.131 119.797 140.112C128.98 125.153 138.269 110.023 147.577 94.8572C135.475 86.5557 118.369 87.5799 105.899 97.9478C93.2846 108.433 86.1869 122.394 81.5151 137.785C80.9041 139.779 80.4909 141.837 79.835 144.478ZM200.819 264.635C201.34 264.743 201.564 264.86 201.762 264.815C219.614 260.565 235.597 252.946 247.528 238.499C258.265 225.49 257.609 209.237 250.089 197.45C234.932 206.749 219.785 216.047 204.772 225.256C209.3 238.535 206.2 251.59 200.819 264.635ZM79.0354 265.866C92.1885 263.79 104.29 261.185 115.53 255.516C124.487 251.006 130.192 243.54 134.181 234.627C134.613 233.666 134.235 231.725 133.49 230.953C127.102 224.331 120.588 217.826 113.985 211.429C113.257 210.72 111.478 210.315 110.58 210.693C103.653 213.604 97.4354 217.745 93.033 223.873C84.2014 236.172 81.8295 250.709 79.0264 265.857L79.0354 265.866ZM272.9 25.9021C288.326 41.3283 303.735 56.7365 319.188 72.1986C324.902 53.5111 328.954 34.1498 330.885 14.2674C319.574 14.3752 287.473 20.8889 272.9 25.9021ZM179.678 221.061C160.874 202.256 142.591 183.973 123.957 165.34C121.496 173.273 119.034 181.386 116.428 189.454C115.512 192.302 116.339 194.557 118.27 196.506C128.324 206.614 138.359 216.739 148.565 226.685C149.859 227.952 152.384 229.201 153.893 228.805C162.617 226.487 171.206 223.666 179.669 221.07L179.678 221.061Z"
          fill="inherit"
        />
        <path
          d="M8.086 345C2.07545 341.136 1.6442 337.093 6.73834 331.99C20.9247 317.786 35.12 303.6 49.3243 289.413C50.1958 288.542 51.0852 287.661 52.1094 286.997C54.7958 285.245 58.2098 285.667 60.42 287.904C62.5942 290.105 62.9985 293.636 61.2286 296.251C60.4829 297.347 59.4946 298.299 58.5423 299.251C44.913 312.899 31.2837 326.546 17.6184 340.157C15.8934 341.873 13.9708 343.392 12.129 345H8.086Z"
          fill="inherit"
        />
        <path
          d="M61.9922 345C55.9817 341.136 55.5504 337.093 60.6446 331.99C74.8309 317.786 89.0262 303.6 103.231 289.413C104.102 288.542 104.991 287.661 106.016 286.997C108.702 285.245 112.116 285.667 114.326 287.904C116.5 290.105 116.905 293.636 115.135 296.251C114.389 297.347 113.401 298.299 112.449 299.251C98.8192 312.899 85.1899 326.546 71.5247 340.157C69.7997 341.873 67.877 343.392 66.0352 345H61.9922Z"
          fill="inherit"
        />
        <path
          d="M0 278.965C1.53633 277.213 2.98281 275.371 4.61797 273.727C18.3102 259.981 32.0293 246.262 45.7484 232.552C46.6199 231.68 47.4734 230.764 48.4617 230.045C51.0223 228.176 54.5441 228.392 56.8441 230.449C59.2699 232.623 59.8 236.181 58.0031 238.993C57.3473 240.018 56.4578 240.916 55.5953 241.779C41.409 255.983 27.2137 270.178 13.0184 284.365C7.92422 289.45 3.88125 289.018 0.00898437 283.008C0.00898437 281.66 0.00898437 280.313 0.00898437 278.965H0Z"
          fill="inherit"
        />
        <path
          d="M163.893 284.068C163.399 284.94 162.752 286.916 161.449 288.264C155.556 294.391 149.5 300.375 143.445 306.349C140.237 309.512 136.032 309.629 133.319 306.799C130.606 303.968 130.75 300.114 133.876 296.952C139.923 290.815 146.032 284.733 152.15 278.659C154.316 276.503 156.858 275.65 159.796 276.934C162.393 278.075 163.758 280.097 163.893 284.068Z"
          fill="inherit"
        />
        <path
          d="M36.1802 205.751C36.6294 204.952 37.2583 203.083 38.4981 201.798C44.5087 195.581 50.636 189.481 56.8083 183.425C59.863 180.424 64.0407 180.379 66.7091 183.111C69.3954 185.86 69.3954 189.714 66.4216 192.751C60.2134 199.094 53.9153 205.338 47.5903 211.555C45.488 213.622 42.9364 214.206 40.1513 212.948C37.5458 211.762 36.2521 209.686 36.1802 205.751Z"
          fill="inherit"
        />
        <path
          d="M243.054 135.637C224.403 135.691 209.48 120.876 209.363 102.188C209.246 83.5098 224.457 68.2184 243.054 68.3263C261.589 68.4341 276.674 83.5637 276.665 102.027C276.656 120.588 261.652 135.592 243.054 135.637ZM242.911 122.17C254.087 122.197 263.072 113.338 263.179 102.17C263.287 91.0028 254.024 81.7219 242.857 81.8118C231.716 81.9016 222.813 90.895 222.831 102.063C222.849 113.275 231.698 122.143 242.911 122.179V122.17Z"
          fill="inherit"
        />
        <path
          d="M194.404 156.921C192.832 155.627 190.343 154.522 189.624 152.716C188.842 150.767 188.842 147.469 190.028 145.96C193.254 141.863 197.126 138.233 201.043 134.756C203.568 132.51 207.207 133.067 209.569 135.412C211.833 137.667 212.543 141.243 210.432 143.642C206.838 147.748 202.849 151.512 198.86 155.259C197.98 156.085 196.443 156.193 194.404 156.921Z"
          fill="inherit"
        />
        <path
          d="M176.112 175.375C172.392 175.303 169.589 172.41 169.616 168.664C169.652 164.971 172.581 162.033 176.246 162.024C180.02 162.024 183.092 165.205 182.949 168.96C182.814 172.644 179.831 175.438 176.112 175.366V175.375Z"
          fill="inherit"
        />
      </g>
      <defs>
        <clippath
          id="clip0_2197_10104"
        >
          <rect
            fill="inherit"
            height="345"
            width="345"
          />
        </clippath>
      </defs>
    </svg>
  </span>
  <span
    class="absolute bs-button-bg inset-0"
  />
</span>
`;

exports[`Given icon option: GoPlus Expect button to have GoPlus 1`] = `
<span
  class="bs-button WhiteBgTextBlue  btn-lg flex-row-reverse  group relative cursor-pointer overflow-hidden inline-flex gap-[1rem] items-center justify-center capitalize"
  data-testid="button-test-id"
>
  <span>
    Button Text
  </span>
  <span
    class="bs-btn-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 12 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <span
    class="absolute bs-button-bg inset-0"
  />
</span>
`;

exports[`Given icon option: Logo Expect button to have Logo 1`] = `
<span
  class="bs-button WhiteBgTextBlue  btn-lg flex-row-reverse  group relative cursor-pointer overflow-hidden inline-flex gap-[1rem] items-center justify-center capitalize"
  data-testid="button-test-id"
>
  <span>
    Button Text
  </span>
  <span
    class="bs-btn-icon"
  >
    <svg
      fill="inherit"
      height="100%"
      viewBox="0 0 332 48"
      width="100%"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.6907 31.7203C13.7805 31.7203 12.0681 29.1025 12.0681 25.6871C11.8703 21.713 13.6783 19.2518 15.6431 19.2518C17.8533 19.2518 19.2589 22.422 19.2589 25.4351C19.2589 29.2528 17.8058 31.7203 15.6907 31.7203ZM18.761 12.1689C16.2911 12.1689 13.2759 13.2186 12.1707 14.5275L12.1707 6.87508e-05H0L0 6.58545H2.10804L2.10804 31.1684H0L0 37.6989H11.3111L12.0681 35.9882C13.4805 37.1945 14.886 38.2515 18.7064 38.2515C25.8014 38.2515 30.1743 33.0773 30.3243 25.3329C30.4811 18.5974 26.4018 12.1689 18.761 12.1689Z"
        fill="inherit"
      />
      <path
        d="M43.7181 15.7817L42.2106 12.564H32.7548V19.1014H34.9174V31.1137H32.7002V37.6987H46.9382V31.1137H44.4207V25.9391C44.4207 21.5151 46.9858 20.3558 51.5157 20.3558V11.3096C46.3309 11.3096 45.028 13.3685 43.7181 15.7817Z"
        fill="inherit"
      />
      <path
        d="M60.3706 10.3076C63.9456 10.3076 65.9034 7.99658 65.9034 5.22895C65.9034 2.918 63.843 0.102556 60.3706 0.102556C56.8506 0.102556 54.9404 2.918 54.9404 5.22895C54.9404 7.64226 57.2052 10.3076 60.3706 10.3076Z"
        fill="inherit"
      />
      <path
        d="M65.2003 12.564H53.5273V19.1014H55.6423V31.1137H53.5273V37.6987H67.6152V31.1137H65.2003V12.564Z"
        fill="inherit"
      />
      <path
        d="M83.7121 31.0658C81.502 31.0658 80.0895 27.8961 80.0895 24.8825C80.0895 21.0649 81.5496 18.5973 83.6645 18.5973C85.5747 18.5973 87.2871 21.2151 87.2871 24.6303C87.4849 28.5983 85.6769 31.0658 83.7121 31.0658ZM87.3347 14.1252C86.3253 13.1231 84.2173 12.0662 81.9997 12.0662C73.704 12.0662 69.3789 17.1928 69.3789 24.9852C69.3789 31.318 72.7967 37.5493 81.4474 37.5493C84.6675 37.5493 86.6322 35.6881 87.3347 34.7815V36.4926C87.3347 38.6059 86.0249 41.2169 81.502 41.2169C77.6746 41.2169 73.9022 39.0078 72.7491 37.9992L70.0819 43.5825C71.9921 45.3411 76.0648 47.9519 81.5976 48C92.165 47.9519 97.2953 42.5258 97.2953 34.1815V19.1497H100.311V12.5641L88.3376 12.5641L87.3347 14.1252Z"
        fill="inherit"
      />
      <path
        d="M131.224 22.7216C131.224 17.4452 130.221 11.6642 122.423 11.6642C118.753 11.6642 115.083 14.7795 114.53 15.6862V-0.000130275H102.353V6.5377H104.467V31.1137H102.353V37.6987H118.146V31.1137H114.53V24.0305C114.53 21.8694 115.13 19.354 117.695 19.354C120.663 19.354 120.663 22.3192 120.663 24.0305V37.6987L133.591 37.6987V31.1137H131.224V22.7216Z"
        fill="inherit"
      />
      <path
        d="M147.025 4.97642L137.775 7.94208V12.5642H135.06V19.1016H137.775V28.0458C137.925 34.4812 138.177 38.606 145.723 38.606C146.875 38.606 150.3 38.2515 151.808 37.6516V31.2161C150.853 31.6183 149.291 32.068 148.636 32.068C146.677 32.068 147.025 29.7569 147.025 28.0458V19.1016L151.808 19.1016V12.5642L147.025 12.5642V4.97642Z"
        fill="inherit"
      />
      <path
        d="M167.159 31.9181C165.051 31.9181 163.441 29.2052 163.441 25.0808C163.441 21.413 164.949 18.5019 166.906 18.5019C169.273 18.5499 170.583 21.4675 170.583 25.2304C170.583 29.0007 169.322 31.9181 167.159 31.9181ZM166.906 11.9644C159.969 11.9644 153.174 16.6411 153.126 25.0327C153.024 33.9295 159.969 38.3535 167.159 38.3535C174.806 38.3535 180.995 33.5747 180.892 25.2304C180.743 16.8386 174.854 12.0664 166.906 11.9644Z"
        fill="inherit"
      />
      <path
        d="M210.88 22.7216C210.88 17.4452 209.578 11.6642 201.78 11.6642C198.608 11.6642 196.295 13.3205 194.583 15.6862L193.43 12.564H182.712V19.1014H184.826V31.1137H182.712V37.6987H198.206V31.1137H194.583V23.9759C194.583 21.8149 195.19 19.2995 197.756 19.2995C200.722 19.2995 200.573 22.2646 200.573 23.9759V37.6987L213.248 37.6987V31.1137H210.88V22.7216Z"
        fill="inherit"
      />
      <path
        d="M228.51 12.0118C228.51 10.2532 230.523 9.35348 231.983 9.35348C235.504 9.35348 238.416 11.46 238.416 15.182H247.524V2.56339L238.873 2.56339L238.368 6.79022C236.357 3.0202 232.079 1.66374 227.855 1.66374C222.923 1.66374 215.882 5.03102 215.882 12.4688C215.882 25.2849 235.197 23.6283 235.197 27.5486C235.197 29.6551 232.686 30.0573 230.925 30.0573C228.811 29.9618 224.589 29.2528 224.589 25.0327H215.228V37.699H224.035L224.589 33.8268C226.499 36.0905 230.018 38.4561 235.101 38.4561C241.084 38.4561 248.431 35.6406 248.431 27.8008C248.431 15.9866 228.51 17.1929 228.51 12.0118Z"
        fill="inherit"
      />
      <path
        d="M250.987 9.20305H254.159V31.0111H250.987V37.6987L281.318 37.6987V26.3413L272.62 26.3413V31.0111L264.571 31.0111V22.824L274.128 22.824V16.1363L264.571 16.1363V9.20305L272.62 9.20305V13.6751H281.318V2.56313L250.987 2.56313V9.20305Z"
        fill="inherit"
      />
      <path
        d="M301.305 30.7117C298.084 30.7117 295.723 26.5392 295.723 19.9541C295.723 13.7231 297.832 9.29889 300.902 9.35343C304.777 9.35343 306.435 14.2277 306.435 20.3085C306.435 26.5392 304.476 30.7117 301.305 30.7117ZM300.957 1.60915C290.538 1.60915 283.3 9.10116 283.3 19.9541C283.3 32.525 290.792 38.606 301.305 38.606C312.67 38.606 319.008 31.6657 319.008 20.3085C319.008 8.99876 313.277 1.60915 300.957 1.60915Z"
        fill="inherit"
      />
      <path
        d="M320.533 32.4705C320.533 35.1357 322.894 37.897 326.215 37.897C329.989 37.897 332 35.4905 332 32.4705C332 29.9072 329.886 26.7441 326.215 26.7441C322.545 26.7441 320.533 29.9072 320.533 32.4705Z"
        fill="inherit"
      />
    </svg>
  </span>
  <span
    class="absolute bs-button-bg inset-0"
  />
</span>
`;

exports[`Given icon option: RiArrowLeftLine Expect button to have RiArrowLeftLine 1`] = `
<span
  class="bs-button WhiteBgTextBlue  btn-lg flex-row-reverse  group relative cursor-pointer overflow-hidden inline-flex gap-[1rem] items-center justify-center capitalize"
  data-testid="button-test-id"
>
  <span>
    Button Text
  </span>
  <span
    class="bs-btn-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M7.828 11H20v2H7.828l5.364 5.364-1.414 1.414L4 12l7.778-7.778 1.414 1.414z"
        />
      </g>
    </svg>
  </span>
  <span
    class="absolute bs-button-bg inset-0"
  />
</span>
`;

exports[`Given icon option: RiArrowRightLine Expect button to have RiArrowRightLine 1`] = `
<span
  class="bs-button WhiteBgTextBlue  btn-lg flex-row-reverse  group relative cursor-pointer overflow-hidden inline-flex gap-[1rem] items-center justify-center capitalize"
  data-testid="button-test-id"
>
  <span>
    Button Text
  </span>
  <span
    class="bs-btn-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
        />
      </g>
    </svg>
  </span>
  <span
    class="absolute bs-button-bg inset-0"
  />
</span>
`;

exports[`Given icon option: RiBusFill Expect button to have RiBusFill 1`] = `
<span
  class="bs-button WhiteBgTextBlue  btn-lg flex-row-reverse  group relative cursor-pointer overflow-hidden inline-flex gap-[1rem] items-center justify-center capitalize"
  data-testid="button-test-id"
>
  <span>
    Button Text
  </span>
  <span
    class="bs-btn-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M17 20H7v1a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1v-1H3v-8H2V8h1V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v3h1v4h-1v8h-1v1a1 1 0 0 1-1 1h-1a1 1 0 0 1-1-1v-1zM5 5v9h14V5H5zm0 11v2h4v-2H5zm10 0v2h4v-2h-4z"
        />
      </g>
    </svg>
  </span>
  <span
    class="absolute bs-button-bg inset-0"
  />
</span>
`;

exports[`Given icon option: RiCalendarEventFill Expect button to have RiCalendarEventFill 1`] = `
<span
  class="bs-button WhiteBgTextBlue  btn-lg flex-row-reverse  group relative cursor-pointer overflow-hidden inline-flex gap-[1rem] items-center justify-center capitalize"
  data-testid="button-test-id"
>
  <span>
    Button Text
  </span>
  <span
    class="bs-btn-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M17 3h4a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h4V1h2v2h6V1h2v2zM4 9v10h16V9H4zm2 4h5v4H6v-4z"
        />
      </g>
    </svg>
  </span>
  <span
    class="absolute bs-button-bg inset-0"
  />
</span>
`;

exports[`Given icon option: RiFacebookFill Expect button to have RiFacebookFill 1`] = `
<span
  class="bs-button WhiteBgTextBlue  btn-lg flex-row-reverse  group relative cursor-pointer overflow-hidden inline-flex gap-[1rem] items-center justify-center capitalize"
  data-testid="button-test-id"
>
  <span>
    Button Text
  </span>
  <span
    class="bs-btn-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M14 13.5h2.5l1-4H14v-2c0-1.03 0-2 2-2h1.5V2.14c-.326-.043-1.557-.14-2.857-.14C11.928 2 10 3.657 10 6.7v2.8H7v4h3V22h4v-8.5z"
        />
      </g>
    </svg>
  </span>
  <span
    class="absolute bs-button-bg inset-0"
  />
</span>
`;

exports[`Given icon option: RiFlightTakeoffFill Expect button to have RiFlightTakeoffFill 1`] = `
<span
  class="bs-button WhiteBgTextBlue  btn-lg flex-row-reverse  group relative cursor-pointer overflow-hidden inline-flex gap-[1rem] items-center justify-center capitalize"
  data-testid="button-test-id"
>
  <span>
    Button Text
  </span>
  <span
    class="bs-btn-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M10.478 11.632L5.968 4.56l1.931-.518 6.951 6.42 5.262-1.41a1.5 1.5 0 0 1 .776 2.898L5.916 15.96l-.776-2.898.241-.065 2.467 2.445-2.626.704a1 1 0 0 1-1.133-.48L1.466 10.94l1.449-.388 2.466 2.445 5.097-1.366zM4 19h16v2H4v-2z"
        />
      </g>
    </svg>
  </span>
  <span
    class="absolute bs-button-bg inset-0"
  />
</span>
`;

exports[`Given icon option: RiInstagramFill Expect button to have RiInstagramFill 1`] = `
<span
  class="bs-button WhiteBgTextBlue  btn-lg flex-row-reverse  group relative cursor-pointer overflow-hidden inline-flex gap-[1rem] items-center justify-center capitalize"
  data-testid="button-test-id"
>
  <span>
    Button Text
  </span>
  <span
    class="bs-btn-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2c2.717 0 3.056.01 4.122.06 1.065.05 1.79.217 2.428.465.66.254 1.216.598 1.772 1.153a4.908 4.908 0 0 1 1.153 1.772c.247.637.415 1.363.465 2.428.047 1.066.06 1.405.06 4.122 0 2.717-.01 3.056-.06 4.122-.05 1.065-.218 1.79-.465 2.428a4.883 4.883 0 0 1-1.153 1.772 4.915 4.915 0 0 1-1.772 1.153c-.637.247-1.363.415-2.428.465-1.066.047-1.405.06-4.122.06-2.717 0-3.056-.01-4.122-.06-1.065-.05-1.79-.218-2.428-.465a4.89 4.89 0 0 1-1.772-1.153 4.904 4.904 0 0 1-1.153-1.772c-.248-.637-.415-1.363-.465-2.428C2.013 15.056 2 14.717 2 12c0-2.717.01-3.056.06-4.122.05-1.066.217-1.79.465-2.428a4.88 4.88 0 0 1 1.153-1.772A4.897 4.897 0 0 1 5.45 2.525c.638-.248 1.362-.415 2.428-.465C8.944 2.013 9.283 2 12 2zm0 5a5 5 0 1 0 0 10 5 5 0 0 0 0-10zm6.5-.25a1.25 1.25 0 0 0-2.5 0 1.25 1.25 0 0 0 2.5 0zM12 9a3 3 0 1 1 0 6 3 3 0 0 1 0-6z"
          fill-rule="nonzero"
        />
      </g>
    </svg>
  </span>
  <span
    class="absolute bs-button-bg inset-0"
  />
</span>
`;

exports[`Given icon option: RiMapPinFill Expect button to have RiMapPinFill 1`] = `
<span
  class="bs-button WhiteBgTextBlue  btn-lg flex-row-reverse  group relative cursor-pointer overflow-hidden inline-flex gap-[1rem] items-center justify-center capitalize"
  data-testid="button-test-id"
>
  <span>
    Button Text
  </span>
  <span
    class="bs-btn-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M18.364 17.364L12 23.728l-6.364-6.364a9 9 0 1 1 12.728 0zM12 15a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm0-2a2 2 0 1 1 0-4 2 2 0 0 1 0 4z"
        />
      </g>
    </svg>
  </span>
  <span
    class="absolute bs-button-bg inset-0"
  />
</span>
`;

exports[`Given icon option: RiMotorbikeLine Expect button to have RiMotorbikeLine 1`] = `
<span
  class="bs-button WhiteBgTextBlue  btn-lg flex-row-reverse  group relative cursor-pointer overflow-hidden inline-flex gap-[1rem] items-center justify-center capitalize"
  data-testid="button-test-id"
>
  <span>
    Button Text
  </span>
  <span
    class="bs-btn-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M4 13.256V12H2v-2h6.365L11.2 8h3.491L13.6 5H11V3h4l1.092 3H20v3h-2.816l1.456 4.002a4.5 4.5 0 1 1-1.985.392L15.419 10h-.947l-1.582 5.87-.002-.001.002.006-2.925 1.064A4.5 4.5 0 1 1 4 13.256zm2-.229a4.5 4.5 0 0 1 3.281 2.033l1.957-.713L12.403 10h-.547L9 12H6v1.027zM5.5 20a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5zm13 0a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z"
        />
      </g>
    </svg>
  </span>
  <span
    class="absolute bs-button-bg inset-0"
  />
</span>
`;

exports[`Given icon option: RiTrainFill Expect button to have RiTrainFill 1`] = `
<span
  class="bs-button WhiteBgTextBlue  btn-lg flex-row-reverse  group relative cursor-pointer overflow-hidden inline-flex gap-[1rem] items-center justify-center capitalize"
  data-testid="button-test-id"
>
  <span>
    Button Text
  </span>
  <span
    class="bs-btn-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M17.2 20l1.8 1.5v.5H5v-.5L6.8 20H5a2 2 0 0 1-2-2V7a4 4 0 0 1 4-4h10a4 4 0 0 1 4 4v11a2 2 0 0 1-2 2h-1.8zM5 7v4h14V7H5zm7 11a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"
        />
      </g>
    </svg>
  </span>
  <span
    class="absolute bs-button-bg inset-0"
  />
</span>
`;

exports[`Given icon option: RiTwitterFill Expect button to have RiTwitterFill 1`] = `
<span
  class="bs-button WhiteBgTextBlue  btn-lg flex-row-reverse  group relative cursor-pointer overflow-hidden inline-flex gap-[1rem] items-center justify-center capitalize"
  data-testid="button-test-id"
>
  <span>
    Button Text
  </span>
  <span
    class="bs-btn-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M22.162 5.656a8.384 8.384 0 0 1-2.402.658A4.196 4.196 0 0 0 21.6 4c-.82.488-1.719.83-2.656 1.015a4.182 4.182 0 0 0-7.126 3.814 11.874 11.874 0 0 1-8.62-4.37 4.168 4.168 0 0 0-.566 2.103c0 1.45.738 2.731 1.86 3.481a4.168 4.168 0 0 1-1.894-.523v.052a4.185 4.185 0 0 0 3.355 4.101 4.21 4.21 0 0 1-1.89.072A4.185 4.185 0 0 0 7.97 16.65a8.394 8.394 0 0 1-6.191 1.732 11.83 11.83 0 0 0 6.41 1.88c7.693 0 11.9-6.373 11.9-11.9 0-.18-.005-.362-.013-.54a8.496 8.496 0 0 0 2.087-2.165z"
        />
      </g>
    </svg>
  </span>
  <span
    class="absolute bs-button-bg inset-0"
  />
</span>
`;

exports[`Given icon option: RiYoutubeFill Expect button to have RiYoutubeFill 1`] = `
<span
  class="bs-button WhiteBgTextBlue  btn-lg flex-row-reverse  group relative cursor-pointer overflow-hidden inline-flex gap-[1rem] items-center justify-center capitalize"
  data-testid="button-test-id"
>
  <span>
    Button Text
  </span>
  <span
    class="bs-btn-icon"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M21.543 6.498C22 8.28 22 12 22 12s0 3.72-.457 5.502c-.254.985-.997 1.76-1.938 2.022C17.896 20 12 20 12 20s-5.893 0-7.605-.476c-.945-.266-1.687-1.04-1.938-2.022C2 15.72 2 12 2 12s0-3.72.457-5.502c.254-.985.997-1.76 1.938-2.022C6.107 4 12 4 12 4s5.896 0 7.605.476c.945.266 1.687 1.04 1.938 2.022zM10 15.5l6-3.5-6-3.5v7z"
        />
      </g>
    </svg>
  </span>
  <span
    class="absolute bs-button-bg inset-0"
  />
</span>
`;
